--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
-	<title>form-design</title>
+	<title>动态表单设计</title>
 </head>
 
 <body>
 	<noscript>
-		<strong>We're sorry but form-design doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+		<strong>We're sorry but this page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 	</noscript>
 	<div id="app"></div>
 	<!-- built files will be auto injected -->
