--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.snow.css" rel="stylesheet">
 	<title>动态表单设计</title>
 </head>
 
@@ -13,7 +14,8 @@
 	<noscript>
 		<strong>We're sorry but this page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 	</noscript>
-	<div id="app"></div>
+  <div id="app"></div>
+  <script src="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.min.js"></script>
 	<!-- built files will be auto injected -->
 </body>
 
