--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 	</noscript>
   <div id="app"></div>
   <script src="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue-quill-editor@3.0.6/dist/vue-quill-editor.min.js"></script>
 	<!-- built files will be auto injected -->
 </body>
 
